# sdc-c5-planning-starter

./: .gitignore  README.md
.github/: copilot-instructions.md
project/: run_carla.sh  simulatorAPI.py
project/starter_files/: CMakeCache.txt  CMakeLists.txt  Makefile  behavior_planner_FSM.cpp  cmake_install.cmake  cost_functions.cpp  libcarla-install  motion_planner.cpp  planning_params.h
